; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-font-add.c_pdf_add_simple_font_encoding.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-font-add.c_pdf_add_simple_font_encoding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Encoding = common dso_local global i32 0, align 4
@WinAnsiEncoding = common dso_local global i32 0, align 4
@fz_glyph_name_from_iso8859_7 = common dso_local global i32 0, align 4
@fz_glyph_name_from_koi8u = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32)* @pdf_add_simple_font_encoding to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pdf_add_simple_font_encoding(i32* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %8, align 4
  switch i32 %9, label %10 [
    i32 128, label %11
    i32 129, label %19
    i32 130, label %25
  ]

10:                                               ; preds = %4
  br label %11

11:                                               ; preds = %4, %10
  %12 = load i32*, i32** %5, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32, i32* @Encoding, align 4
  %15 = call i32 @PDF_NAME(i32 %14)
  %16 = load i32, i32* @WinAnsiEncoding, align 4
  %17 = call i32 @PDF_NAME(i32 %16)
  %18 = call i32 @pdf_dict_put(i32* %12, i32* %13, i32 %15, i32 %17)
  br label %31

19:                                               ; preds = %4
  %20 = load i32*, i32** %5, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = load i32, i32* @fz_glyph_name_from_iso8859_7, align 4
  %24 = call i32 @pdf_add_simple_font_encoding_imp(i32* %20, i32* %21, i32* %22, i32 %23)
  br label %31

25:                                               ; preds = %4
  %26 = load i32*, i32** %5, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = load i32*, i32** %7, align 8
  %29 = load i32, i32* @fz_glyph_name_from_koi8u, align 4
  %30 = call i32 @pdf_add_simple_font_encoding_imp(i32* %26, i32* %27, i32* %28, i32 %29)
  br label %31

31:                                               ; preds = %25, %19, %11
  ret void
}

declare dso_local i32 @pdf_dict_put(i32*, i32*, i32, i32) #1

declare dso_local i32 @PDF_NAME(i32) #1

declare dso_local i32 @pdf_add_simple_font_encoding_imp(i32*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
